--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
     "react-modal": "^3.14.3",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
