--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "draft-js": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
@@ -14,6 +15,7 @@
     "react-quill": "^0.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
+    "rich-markdown-editor": "^11.18.12",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
