--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "prettier": "npx prettier --write .",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
