--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "draft-js": "^0.11.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-konva": "^17.0.2-5",
     "react-modal": "^3.14.3",
     "react-quill": "^0.0.2",
