--- a/.github/workflows/backend.js.yml
+++ b/.github/workflows/backend.js.yml
@@ -25,5 +25,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
-      - run: cd ../backend
+      - run: cd backend
       - run: npm run dev
