--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "prettier": "npx prettier --write .",
     "dev": "nodemon sample.js",
     "start": "node sample.js",
-    "test": "jest" 
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jest": "^27.3.1",
     "jest-cli": "^27.3.1",
+    "mongodb-memory-server": "^8.0.3",
     "mongoose": "^6.0.12",
     "nodemon": "^2.0.14"
   },
