--- a/.github/workflows/backend.js.yml
+++ b/.github/workflows/backend.js.yml
@@ -30,4 +30,4 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
           cache-dependency-path: "backend/package-lock.json"
-      - run: npm run dev
+      - run: npm test
