--- a/.github/workflows/backend.js.yml
+++ b/.github/workflows/backend.js.yml
@@ -31,3 +31,4 @@ jobs:
           cache: "npm"
           cache-dependency-path: "backend/package-lock.json"
       - run: npm test
+      - run: npm run prettier
