--- a/.github/workflows/backend.js.yml
+++ b/.github/workflows/backend.js.yml
@@ -30,5 +30,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
           cache-dependency-path: "backend/package-lock.json"
+      - run: npm install
       - run: npm test
       - run: npm run prettier
