--- a/.github/workflows/frontend.js.yml
+++ b/.github/workflows/frontend.js.yml
@@ -30,4 +30,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
           cache-dependency-path: "frontend/package-lock.json"
+      - run: npm install
       - run: npm build
