CI/CD pipeline fix

--- a/.github/workflows/backend.js.yml
+++ b/.github/workflows/backend.js.yml
@@ -31,5 +31,5 @@ jobs:
           cache: "npm"
           cache-dependency-path: "backend/package-lock.json"
       - run: npm install
-      - run: npm test
       - run: npm run prettier
+      - run: npm start
